import 'package:appflowy/shared/object_type_typography.dart';
import 'package:appflowy/shared/text_rendering.dart';
import 'package:flutter/material.dart';

enum EditorToolbarGlyph {
  textFormat('Aa'),
  bold('B'),
  underline('U'),
  italic('I');

  const EditorToolbarGlyph(this.text);

...
